<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">



        <com.google.android.material.appbar.AppBarLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?actionBarSize"
                android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
                app:navigationIcon="@drawable/arrow_left"
                app:contentInsetStart="72dp"
                app:layout_collapseMode="pin"/>

        </com.google.android.material.appbar.AppBarLayout>


    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.google.android.gms.ads.AdView
            xmlns:ads="http://schemas.android.com/apk/res-auto"
            android:id="@+id/adView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            ads:adSize="BANNER"
            ads:adUnitId="ca-app-pub-3940256099942544/6300978111">
        </com.google.android.gms.ads.AdView>

        <ImageView
            android:id="@+id/thumbnail_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/tv_poster"
            android:scaleType="centerCrop" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:text="@string/tv_title"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/title"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:text="@string/release_date"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/releasedate"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:text="@string/rating"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/userrating"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:text="@string/tv_overview"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/plotsynopsis"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:text="@string/tv_favorite"
            android:textStyle="bold" />



        <com.github.ivbaranov.mfb.MaterialFavoriteButton
            android:id="@+id/favorite_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="40dp"
            android:minHeight="32dp"
            app:mfb_type="heart"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:contentDescription="@string/save_favorite"
             />



        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/thumbnailUrl"
            app:layout_constraintTop_toBottomOf="@+id/plotsynopsis"
            app:layout_constraintLeft_toLeftOf="parent"
            android:visibility="invisible"/>


        <TextView
            android:id="@+id/trailer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:textStyle="bold"
            android:textSize="16sp"
            android:text="@string/trailer"
            app:layout_constraintTop_toBottomOf="@+id/plotsynopsis"
            app:layout_constraintLeft_toLeftOf="parent"/>


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:clipToPadding="false"
            android:scrollbars="vertical"
            app:layout_constraintTop_toBottomOf="@+id/trailer"
            app:layout_constraintLeft_toLeftOf="parent"/>



        <TextView
            android:id="@+id/review"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:textStyle="bold"
            android:textSize="16sp"
            android:text="@string/review"
            />


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:clipToPadding="false"
            android:scrollbars="vertical"
            app:layout_constraintTop_toBottomOf="@+id/review"
            app:layout_constraintLeft_toLeftOf="parent"
            />

        <TextView
            android:id="@+id/similartv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:textStyle="bold"
            android:textSize="16sp"
            android:text="@string/SimilarTV"
            />


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:clipToPadding="false"
            android:scrollbars="vertical"
            app:layout_constraintTop_toBottomOf="@+id/similartv"
            app:layout_constraintLeft_toLeftOf="parent"
            />

    </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>